# userland

./: .gitignore  Android.mk  CMakeLists.txt  FireFuse.c  FirePiCam.c  FirePiCam.h.in  FirePiStill.c  HelloWorld.java  LICENCE  README.md  RaspiCLI.h  RaspiCamControl.h  RaspiCamDocs.odt  RaspiVid.c  buildme  buildme.netbsd  buildme_android  camcv.c  camera_i2c  hello.sh  libHelloWorld.c  rpi3-gpiovirtbuf
containers/: CMakeLists.txt  containers.h  packetizers.h
containers/asf/: CMakeLists.txt  asf_reader.c
containers/core/: containers_bytestream.h  containers_logging.c  containers_uri.h  containers_writer_utils.c
containers/net/: net_sockets.h
containers/test/: CMakeLists.txt  autotest.cpp  test.c
host_applications/android/apps/vidtex/: CMakeLists.txt  svp.c
host_applications/linux/: CMakeLists.txt
host_applications/linux/apps/dtmerge/: CMakeLists.txt  dtmerge.1  dtmerge.c
host_applications/linux/apps/dtoverlay/: CMakeLists.txt  dtoverlay-post  dtoverlay-pre  dtoverlay.1  dtoverlay_main.c  dtparam.1  utils.c  utils.h
host_applications/linux/apps/gencmd/: CMakeLists.txt  gencmd.1  gencmd.c  vcgencmd-completion-test.bats  vcgencmd-completion.bash  vcgencmd.1
host_applications/linux/apps/hello_pi/: CMakeLists.txt  Makefile  Makefile.include  README  rebuild.sh
host_applications/linux/apps/raspicam/: CMakeLists.txt  Doxyfile  Makefile  README  README.md  RaspiCLI.c  RaspiCLI.h  RaspiCamControl.c  RaspiCamControl.h  RaspiCamDocs.odt  RaspiCommonSettings.c  RaspiCommonSettings.h  RaspiGPS.c  RaspiHelpers.c  RaspiHelpers.h  RaspiPreview.c  RaspiPreview.h  RaspiStill.c  RaspiStillYUV.c  RaspiTex.c  RaspiTex.h  RaspiTexStub.c  RaspiTexUtil.c  RaspiTexUtil.h  RaspiVid.c  RaspiVidYUV.c  adv7282m_modes.h  farvcam.c  gps.h  imx219_modes.h  libgps.c  libgps.h  libgps_loader.c  libgps_loader.h  mirror.c  models.c  ov5647_modes.h  raspicam.7  raspiraw.c  raspistill.1  (+6 more)
host_applications/linux/apps/smem/: smem.c
host_applications/linux/apps/tvservice/: CMakeLists.txt  tvservice.1  tvservice.c
host_applications/linux/apps/vcmailbox/: CMakeLists.txt  raspiotp.7  raspirev.7  vcmailbox.1  vcmailbox.7
host_applications/linux/kernel_headers/: vmcs_sm_ioctl.h
host_applications/linux/libs/bcm_host/: CMakeLists.txt  bcm_host.c  bcm_host.h
host_applications/linux/libs/debug_sym/: CMakeLists.txt  debug_sym.c  debug_sym.h
host_applications/linux/libs/sm/: CMakeLists.txt  user-vcsm.c  user-vcsm.h  vc_sm_cma_ioctl.h
interface/khronos/: CMakeLists.txt
interface/khronos/common/: khrn_client.c  khrn_client.h  khrn_client_mangle.h  khrn_client_platform.h  khrn_client_rpc.h  khrn_client_unmangle.h  khrn_int_common.h  khrn_int_generic_map.c  khrn_int_hash.c  khrn_int_ids.h  khrn_int_image.c
interface/khronos/common/linux/: khrn_client_platform_linux.c  khrn_client_rpc_linux.c  khrn_wayland.c  khrn_wayland.h
interface/khronos/egl/: egl_client.c  egl_client_config_cr.c  egl_client_cr.c  egl_client_get_proc.c  egl_client_surface.c  egl_client_surface.h  egl_int_impl.h
interface/khronos/ext/: egl_khr_image_client.c  egl_khr_sync_client.c  egl_wayland.c  gl_oes_egl_image_client.c
interface/khronos/glxx/: glxx_client.c
interface/khronos/include/EGL/: eglext.h  eglext_brcm.h  eglplatform.h
interface/khronos/include/GLES2/: gl2ext.h
interface/khronos/include/KHR/: khrplatform.h
interface/khronos/include/WF/: wfc.h
interface/khronos/vg/: vg_client.c
interface/khronos/wayland-egl/: wayland-egl-priv.h  wayland-egl.c  wayland-egl.pc.in
interface/khronos/wf/: wfc_client.c  wfc_client_ipc.c  wfc_client_server_api.c  wfc_client_stream.c  wfc_client_stream.h  wfc_int.h  wfc_ipc.h  wfc_server_api.h
interface/mmal/: CMakeLists.txt  mmal.h  mmal_buffer.h  mmal_common.h  mmal_component.h  mmal_encodings.h  mmal_format.h  mmal_logging.h  mmal_metadata.h  mmal_parameters.h  mmal_parameters_audio.h  mmal_parameters_camera.h  mmal_parameters_clock.h  mmal_parameters_common.h  mmal_parameters_video.h  mmal_pool.h  mmal_port.h  mmal_types.h
interface/mmal/client/brcmjpeg/: CMakeLists.txt
interface/mmal/components/: CMakeLists.txt  spdif.c
interface/mmal/core/: CMakeLists.txt  mmal_buffer.c  mmal_buffer_private.h  mmal_clock.c  mmal_clock_private.h  mmal_component.c  mmal_component_private.h  mmal_format.c  mmal_logging.c  mmal_pool.c  mmal_port.c  mmal_port_clock.c  mmal_port_private.h  mmal_queue.c
interface/mmal/openmaxil/: CMakeLists.txt  mmalomx_core.c  mmalomx_logging.c  mmalomx_parameters.c  mmalomx_util_params.c  mmalomx_util_params_camera.c  mmalomx_util_params_video.c
interface/mmal/test/: CMakeLists.txt
interface/mmal/util/: CMakeLists.txt  mmal_component_wrapper.c  mmal_connection.c  mmal_connection.h  mmal_default_components.h  mmal_graph.c  mmal_graph.h  mmal_il.c  mmal_il.h  mmal_list.h  mmal_param_convert.c  mmal_param_convert.h  mmal_util.c  mmal_util.h  mmal_util_params.c  mmal_util_params.h
interface/mmal/vc/: CMakeLists.txt  mmal_vc_api.c  mmal_vc_api.h  mmal_vc_api_drm.c  mmal_vc_client.c  mmal_vc_client_priv.h  mmal_vc_diag.c  mmal_vc_msgnames.c  mmal_vc_msgs.h  mmal_vc_opaque_alloc.c  mmal_vc_opaque_alloc.h  mmal_vc_shm.c
interface/usbdk/: CMakeLists.txt
interface/usbdk/test/: stubs.c
interface/usbdk/vmcs_rpc_client/: message_dispatch.c  message_dispatch.h  platform.c
interface/vmcs_host/: CMakeLists.txt  vc_cecservice.h  vc_dispmanx.h  vc_dispmanx_egl.h  vc_dispmanx_types.h  vc_dispservice_x_defs.h  vc_fileservice_defs.h  vc_gencmd_defs.h  vc_hdmi.h  vc_hdmi_property.h  vc_hostreq_defs.h  vc_ilcs_defs.h  vc_sdtv.h  vc_service_common.c  vc_service_common.h  vc_tvservice.h  vc_tvservice_defs.h  vc_vchi_audioserv_defs.h  vc_vchi_bufman.h  vc_vchi_bufman_defs.h  vc_vchi_cecservice.c  vc_vchi_dispmanx.c  vc_vchi_dispmanx.h  vc_vchi_filesys.c  vc_vchi_filesys.h  vc_vchi_gencmd.c  vc_vchi_gencmd.h  vc_vchi_gpuserv.c  vc_vchi_gpuserv.h  vc_vchi_tvservice.c  vcfilesys.h  vcfilesys_defs.h  vcgencmd.h  vchost.h  vchost_platform_config.h  vchostreq.h  vcilcs.c  vcilcs.h  vcilcs_common.h  vcilcs_out.c
interface/vmcs_host/linux/: vcfilesys.c
(+241 files in other folders)
