cmake_minimum_required(VERSION 2.8)
project( FirePiCam )
SET(COMPILE_DEFINITIONS -Werror)
include_directories(/opt/vc/userland/host_applications/linux/libs/bcm_host/include)
include_directories(/opt/vc/userland/interface/vcos)
include_directories(/opt/vc/userland)
include_directories(/opt/vc/userland/interface/vcos/pthreads)
include_directories(/opt/vc/userland/interface/vmcs_host/linux)
include_directories(host_applications/linux/apps/raspicam)
add_executable(FirePiCam RaspiCamControl.c RaspiCLI.c RaspiPreview.c FirePiCam.c)
target_link_libraries(FirePiCam /opt/vc/lib/libmmal_core.so /opt/vc/lib/libmmal_util.so /opt/vc/lib/libmmal_vc_client.so /opt/vc/lib/libvcos.so /opt/vc/lib/libbcm_host.so )
